# solstice

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  solidity.configuration.json
.github/workflows/: release.yaml  test.yaml
client/: package.json
client/src/: extension.ts
examples/: here  output
examples/cache/: solidity-files-cache.json
examples/src/: Frontier.sol  Frontier2.sol  Parent.sol
examples/src/other/: Frontier.sol
examples/test/: Frontier.sol
scripts/ci/: install-solc.sh
src/: builder.rs  dap.rs  debugger.rs  main.rs  state.rs  tracer.rs
src/testcases/: .gitignore  foundry.toml
src/testcases/src/: example1.sol
src/testcases/syntax/: example1.sol  example1.syntax
src/testcases/test/: example.t.sol  example.t.trace
syntax/: solidity.json
