[package]
name = "solstice"
version = "0.1.1"
edition = "2021"
build = "src/build.rs"

[dependencies]
chumsky = "0.8.0"
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"
foundry-compilers = "0.13.2"
revm-inspectors = { version = "0.11.0", features = ["serde"] }
alloy-primitives = "0.8.19"
alloy-sol-types = "0.8.19"
alloy-provider = { version = "0.9", features = [
    "anvil-node",
    "trace-api",
    "debug-api",
] }
alloy-node-bindings = "0.9"
alloy-contract = "0.9"
alloy-rpc-types = "0.9"
alloy-rpc-types-trace = "0.9"
alloy-rpc-types-debug = "0.9"
alloy-transport = "0.9"
alloy-transport-http = "0.9"
lsp-types = "0.97.0"
eyre = "0.6"
rayon = "1"
rustc-hash = "1.1"
semver = "1"
dap = "0.4.1-alpha1"
clap = { version = "4.5.16", features = ["derive"] }
solang-parser = { git = "http://github.com/hyperledger-solang/solang", rev = "fa338eba3b0e546ea2351c080e34252f0bf134a7" }
solang = { git = "http://github.com/hyperledger-solang/solang", rev = "fa338eba3b0e546ea2351c080e34252f0bf134a7", default-features = false }
forge-fmt = { git = "http://github.com/hyperledger-solang/solang", rev = "fa338eba3b0e546ea2351c080e34252f0bf134a7", default-features = false }
anstream = "0.6.18"
arbitrary = { version = "1", features = ["derive"] }
getrandom = "0.2"
rand = "0.8"
rust-lapper = { version = "1.1" }
itertools = ">=0.10, <=0.13"
num-traits = "0.2"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
built = { version = "0.7.1", features = ["git2", "chrono"] }
